feat:Adiciona testes de components e tela de upload

--- a/src/global.scss
+++ b/src/global.scss
@@ -37,3 +37,10 @@ $gray: #9ea1b0;
 .default {
   color: black;
 }
+.separetor {
+  width: 80%;
+  height: 1px;
+  background-color: $gray;
+  margin-top: 24px;
+  margin-bottom: 24px;
+}
