fix : Ajusta Layout do NavBar e deixa componente inteligente

--- a/src/components/Balance/style.module.scss
+++ b/src/components/Balance/style.module.scss
@@ -6,6 +6,7 @@
   background-color: $white;
   justify-content: flex-end;
   border-radius: 20px;
+  margin-bottom: 32px;
   .balanceInfo {
     height: 50px;
     width: 300px;
