--- a/src/components/RowForm/styles.module.scss
+++ b/src/components/RowForm/styles.module.scss
@@ -25,3 +25,11 @@
     flex: 1;
   }
 }
+
+@media screen and (max-width: 600px) {
+  .cover {
+    flex-direction: column;
+    gap: 10px;
+    align-items: flex-start;
+  }
+}
